crates/mineral-tui/src/components/layout/browse/sidebar/snapshots/playlists_search_deep_hit_alias_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/sidebar/playlists.rs
assertion_line: 644
description: "歌单列表:别名深度命中(match 列 ♪ 迷星叫 (Mayoiuta) · MyGO!!!!!,别名括注 dim)"
expression: t.backend()
---
"╭ playlists /mayo──────────────────────────────────────────────────────────────────────────────────╮"
"│  name                               match                              source      length   items⢹"
"│▌ The Power of Failing               ♪ 迷星叫 (Mayoiuta) · MyGO!!!!!    ♫ netease   —        8    ⢸" Hidden by multi-width symbols: [(41, " "), (43, " "), (45, " ")]
"│                                                                                                  ⢸"
"│                                                                                                  ⢸"
"│                                                                                                  ⢸"
"│                                                                                                  ⢸"
"│                                                                                                  ⢸"
"│                                                                                                  ⢸"
"│                                                                                                  ⢸"
"│                                                                                                  ⢸"
"╰ 1 / 1 ───────────────────────────────────────────────────────────────────────────────────────────╯"
