crates/mineral-tui/src/components/layout/browse/sidebar/snapshots/playlists_search_deep_hit_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/sidebar/playlists.rs
assertion_line: 611
description: "歌单列表:深度命中(match 列展示 ♪ 春日影 · CRYCHIC,命中高亮)"
expression: t.backend()
---
"╭ playlists /春日──────────────────────────────────────────────╮" Hidden by multi-width symbols: [(14, " "), (16, " ")]
"│  name             match            source      length   items⢹"
"│▌ The Power of Fai ♪ 春日影 · CRYCH ♫ netease   —        8    ⢸" Hidden by multi-width symbols: [(23, " "), (25, " "), (27, " ")]
"│                                                              ⢸"
"│                                                              ⢸"
"│                                                              ⢸"
"│                                                              ⢸"
"│                                                              ⢸"
"│                                                              ⢸"
"│                                                              ⢸"
"│                                                              ⢸"
"╰ 1 / 1 ───────────────────────────────────────────────────────╯"
