crates/mineral-tui/src/components/layout/browse/sidebar/snapshots/playlists_search_no_match_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/sidebar/playlists.rs
assertion_line: 662
description: "歌单列表:搜索零命中(居中「无匹配」)"
expression: t.backend()
---
"╭ playlists /zzz───────────────────────╮"
"│                                      ⢸"
"│            no match found            ⢸"
"│                                      ⢸"
"│                                      ⢸"
"│                                      ⢸"
"│                                      ⢸"
"│                                      ⢸"
"│                                      ⢸"
"│                                      ⢸"
"│                                      ⢸"
"╰ 0 / 0 ───────────────────────────────╯"
