crates/mineral-tui/src/components/layout/browse/sidebar/snapshots/playlists_search_pinyin_full_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/sidebar/playlists.rs
assertion_line: 581
description: "歌单列表:全拼 chunying 命中「春日影」(春 + 影 高亮)"
expression: t.backend()
---
"╭ playlists /chunying──────────────────╮"
"│  name      source      length   items⢹"
"│▌ 春日影    ♫ netease   —        1    ⢸" Hidden by multi-width symbols: [(4, " "), (6, " "), (8, " ")]
"│                                      ⢸"
"│                                      ⢸"
"│                                      ⢸"
"│                                      ⢸"
"│                                      ⢸"
"│                                      ⢸"
"│                                      ⢸"
"│                                      ⢸"
"╰ 1 / 1 ───────────────────────────────╯"
